<resources>
    <string name="app_name">Android Rewards Program</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_redeem_rewards">RedeemRewardsActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="ffm_title">Frequent Flyer Miles</string>
    <string name="hint_name">Name</string>
    <string name="hint_miles">Enter Miles Flown</string>
    <string name="check_status">Check Status</string>
    <string name="ffm">Frequent Flyer Miles</string>
    <string name="redeem">Redeem Rewards</string>
    <string name="rewards_rules">The Rules</string>
    <string name="rules_notice">The Rules can also be seen in the Action Bar here.</string>
    <string name="upgrade">Upgrade Your Seat</string>
    <string name="length">Length of Flight</string>
    <string name="redeem_mileage">Redeem Mileage</string>
</resources>
