<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cis2237.himes_p4.androidrewardsprogram.RedeemRewardsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redeem"
        android:id="@+id/txtRedeemTitle"
        android:textStyle="bold|italic"
        android:textSize="30dp"
        android:textColor="#8F8F00"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_notice"
        android:id="@+id/txtRules"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBalance"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnUpgrade"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/upgrade"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etxLength"
            android:hint="@string/length" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redeem_mileage"
            android:id="@+id/btnRedeemB"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRemainingMilesB"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="80dp" />
</LinearLayout>
