<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cis2237.himes_p4.androidrewardsprogram.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ffm_title"
        android:id="@+id/txtTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#8F8F00" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etxName"
        android:hint="@string/hint_name"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etxMiles"
        android:hint="@string/hint_miles"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_status"
        android:id="@+id/btnStatus"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgGeneral"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rewards" />
</LinearLayout>
